do some changes in database

--- a/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/add-intervention/add-intervention.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/add-intervention/add-intervention.page.html
@@ -50,7 +50,7 @@
           </ion-item>
 
           <ion-item>
-            <ion-label position="floating">why Is Important</ion-label>
+            <ion-label position="floating">Why Is Important</ion-label>
             <ion-textarea
               type="text"
               formControlName="whyIsImportant"
@@ -59,7 +59,7 @@
             ></ion-textarea>
           </ion-item>
           <ion-item *ngIf="form.get('whyIsImportant').inValid">
-            <p>Please Enter why Is Important</p>
+            <p>Please Enter Why Is Important</p>
           </ion-item>
 
           <ion-item>
@@ -85,11 +85,11 @@
             ></ion-textarea>
           </ion-item>
           <ion-item *ngIf="form.get('howToIdentify').inValid">
-            <p>Please Enter howToIdentify</p>
+            <p>Please Enter How To Identify</p>
           </ion-item>
 
           <ion-item>
-            <ion-label position="floating">why And Where It Occours</ion-label>
+            <ion-label position="floating">Why And Where It Occurs</ion-label>
             <ion-textarea
               type="text"
               formControlName="whyAndWhereItOccours"
@@ -98,11 +98,11 @@
             ></ion-textarea>
           </ion-item>
           <ion-item *ngIf="form.get('whyAndWhereItOccours').inValid">
-            <p>Please Enter why And Where It Occours</p>
+            <p>Please Enter Why And Where It Occurs</p>
           </ion-item>
 
           <ion-item>
-            <ion-label position="floating">what Id Does</ion-label>
+            <ion-label position="floating">What Id Does</ion-label>
             <ion-textarea
               type="text"
               formControlName="whatIdDoes"
@@ -111,7 +111,7 @@
             ></ion-textarea>
           </ion-item>
           <ion-item *ngIf="form.get('whatIdDoes').inValid">
-            <p>Please Enter what It Does</p>
+            <p>Please Enter What It Does</p>
           </ion-item>
 
           <ion-row class="btn-row">
