--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/animal-intervention/view/view.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/animal-intervention/view/view.page.html
@@ -29,10 +29,10 @@
           <ion-toolbar color="danger" class="text-center my-2">How to manage</ion-toolbar>
           <ion-item>{{intervention.howToManage}}</ion-item>
 
-          <ion-toolbar color="secondary" class="text-center my-2">What it does</ion-toolbar>
+          <ion-toolbar color="secondary" class="text-center my-2"> What it does</ion-toolbar>
           <ion-item>{{intervention.whatIdDoes}}</ion-item>
 
-          <ion-toolbar color="warning" class="text-center my-2">Why and where it occours</ion-toolbar>
+          <ion-toolbar color="warning" class="text-center my-2"> Why and where it occurs</ion-toolbar>
           <ion-item>{{intervention.whyAndWhereItOccours}}</ion-item>
 
           <ion-toolbar color="light" class="text-center my-2">Why is important</ion-toolbar>
