--- a/Green_S9_Group_project/src/app/register/register.page.html
+++ b/Green_S9_Group_project/src/app/register/register.page.html
@@ -2,11 +2,11 @@
   <ion-toolbar color="primary">
     <ion-title text-center>Register</ion-title>
 
-    <ion-buttons slot="end">
+    <!--<ion-buttons slot="end">
       <ion-button (click)="openLanguagePopover($event)">
         <ion-icon name="ellipsis-vertical-outline"></ion-icon>
       </ion-button>
-    </ion-buttons>
+    </ion-buttons>-->
   </ion-toolbar>
 </ion-header>
 
