change some titles

--- a/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
@@ -5,7 +5,7 @@
         [defaultHref]="['/admin','tabs','home',crop.name]"
       ></ion-back-button>
     </ion-buttons>
-    <ion-title *ngIf="!isLoading">{{crop.name}}</ion-title>
+    <ion-title *ngIf="!isLoading">Animal Intervention</ion-title>
     <ion-title *ngIf="isLoading">
       <ion-spinner color="primary"></ion-spinner>
     </ion-title>
