--- a/Green_S9_Group_project/src/app/admin/home/crop/diseases/diseases.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/diseases/diseases.page.html
@@ -5,7 +5,7 @@
         [defaultHref]="['/admin','tabs','home',crop.name]"
       ></ion-back-button>
     </ion-buttons>
-    <ion-title>Green Live</ion-title>
+    <ion-title>Disease</ion-title>
   </ion-toolbar>
 </ion-header>
 
